<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eldarja.ping.login.ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin_large"
        android:layout_marginTop="@dimen/page_margin_large"
        android:layout_marginRight="@dimen/page_margin_large"
        android:orientation="vertical">

        <TextView
            android:text="@string/get_started_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/Divider"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_regular">
            <ProgressBar
                android:id="@+id/progressBarRegisterCallingCodes"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/margin_regular"
                style="@style/AppTheme.ProgressBar.Small" />
            <Spinner
                android:id="@+id/spinnerRegisterCallingCodes"
                android:spinnerMode="dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterPhoneNumber"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="@dimen/padding_regular"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterFirstname"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="@dimen/padding_regular"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputRegisterLastname"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingStart="@dimen/padding_regular"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>